bitsandbytes/bnb/tests/ui_seek/restore_position_needs_seek.stderr
error[E0277]: the trait bound `StreamBitReader<&[u8]>: SeekSource` is not satisfied
  --> tests/ui_seek/restore_position_needs_seek.rs:19:28
   |
19 |     let _ = Peeked::decode(&mut r);
   |             -------------- ^^^^^^ the trait `SeekSource` is not implemented for `StreamBitReader<&[u8]>`
   |             |
   |             required by a bound introduced by this call
   |
help: the following other types implement trait `SeekSource`
  --> src/bitstream.rs
   |
   | impl SeekSource for BitReader<'_> {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `BitReader<'_>`
...
   | impl<R: std::io::Read> SeekSource for BufSource<R> {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `BufSource<R>`
...
   | impl SeekSource for BitBuf {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^ `BitBuf`
...
   | impl<R: std::io::Read + std::io::Seek> SeekSource for SeekReader<R> {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `SeekReader<R>`
note: required by a bound in `Peeked::decode`
  --> tests/ui_seek/restore_position_needs_seek.rs:8:1
   |
 8 | #[bin(big)]
   | ^^^^^^^^^^^ required by this bound in `Peeked::decode`
   = note: this error originates in the attribute macro `bin` (in Nightly builds, run with -Z macro-backtrace for more info)
